# SDGCornerstone

./: .Workspace Configuration.txt  .gitattributes  .gitignore  .swiftlint.yml  .travis.yml  CI.txt  Package.resolved  Package.swift  README.md  Refresh (Linux).sh  Refresh (macOS).command  Workspace.swift  index.html
.github/: CONTRIBUTING.md
.github/workflows/: Amazon Linux.yaml  Android.yaml  Carton 0.18 (Web).yaml  CentOS.yaml  Documentation Deployment.yaml  Miscellaneous.yaml  Specialized.yaml  Swift 5.4 Amazon Linux.yaml  Swift 5.4 Android.yaml  Swift 5.4 CentOS.yaml  Swift 5.4 Ubuntu.yaml  Swift 5.4 Web.yaml  Swift 5.4 Windows.yaml  Swift 5.4 iOS.yaml  Swift 5.4 macOS.yaml  Swift 5.4 tvOS.yaml  Swift 5.4 watchOS.yaml  Swift 5.5 (Amazon Linux).yaml  Swift 5.5 (Ubuntu).yaml  Swift 5.5 (Windows).yaml  Swift 5.5 (iOS).yaml  Swift 5.5 (macOS).yaml  Swift 5.5 (tvOS).yaml  Swift 5.5 (watchOS).yaml  Swift 5.5 Amazon Linux.yaml  Swift 5.5 Android.yaml  Swift 5.5 CentOS.yaml  Swift 5.5 Ubuntu.yaml  Swift 5.5 Windows.yaml  Swift 5.5 iOS.yaml  Swift 5.5 macOS.yaml  Swift 5.5 tvOS.yaml  Swift 5.5 watchOS.yaml  Swift 5.6 (Windows).yaml  Swift 5.7 (Amazon Linux).yaml  Swift 5.7 (Android).yaml  Swift 5.7 (Ubuntu).yaml  Swift 5.7 (Web).yaml  Swift 5.7 (Windows).yaml  Swift 5.7 (iOS).yaml  (+13 more)
.github/workflows/Windows/: CMakeLists.txt  WindowsMain.swift
Documentation/: Related Projects.md  🇨🇦EN Read Me.md  🇨🇦EN Related Projects.md
Plugins/SDGCopySources/: CopySources.swift
Plugins/SDGEmbedResources/: EmbedResources.swift
Resources/SDGCollation/: Root
SDGBinaryData/: metadata.json
SDGBinaryData/index/: index.json
SDGCalendar/: metadata.json
SDGCalendar/index/: index.json
SDGCollation/: metadata.json
SDGCollation/index/: index.json
SDGCollections/: metadata.json
SDGCollections/index/: index.json
SDGCollectionsTestUtilities/: metadata.json
SDGCollectionsTestUtilities/index/: index.json
SDGConcurrency/: metadata.json
SDGConcurrency/index/: index.json
SDGControlFlow/: metadata.json
SDGControlFlow/index/: index.json
SDGCornerstone/: metadata.json
SDGCornerstone/index/: index.json
SDGExternalProcess/: metadata.json
SDGExternalProcess/index/: index.json
SDGGeometry/: metadata.json
SDGGeometry/index/: index.json
SDGGeometryTestUtilities/: metadata.json
SDGGeometryTestUtilities/index/: index.json
SDGLocalization/: metadata.json
SDGLocalization/index/: index.json
SDGLocalizationTestUtilities/: index.html  metadata.json
SDGLocalizationTestUtilities/index/: index.json
SDGLogic/: metadata.json
SDGLogic/index/: index.json
SDGLogicTestUtilities/: index.html  metadata.json
SDGLogicTestUtilities/index/: index.json
SDGMathematics/: metadata.json
SDGMathematics/index/: index.json
SDGMathematicsTestUtilities/: metadata.json
SDGMathematicsTestUtilities/index/: index.json
SDGPersistence/: metadata.json
SDGPersistence/index/: index.json
SDGPersistenceTestUtilities/: metadata.json
SDGPersistenceTestUtilities/index/: index.json
SDGPrecisionMathematics/: metadata.json
SDGPrecisionMathematics/index/: index.json
SDGRandomization/: metadata.json
SDGRandomization/index/: index.json
SDGRandomizationTestUtilities/: metadata.json
SDGRandomizationTestUtilities/index/: index.json
SDGTesting/: metadata.json
SDGTesting/index/: index.json
SDGText/: metadata.json
SDGText/index/: index.json
SDGVersioning/: metadata.json
SDGVersioning/index/: index.json
SDGXCTestUtilities/: index.html  metadata.json
SDGXCTestUtilities/index/: index.json
SDGXML/: metadata.json
SDGXML/index/: index.json
Sources/Debugging/: Int.swift  Operators.swift
Sources/SDGBinaryData/: Data.swift  DataBinaryView.swift  DataStream.swift  Exports.swift  UInt.swift  UIntBinaryView.swift
Sources/SDGBinaryDataCore/: UInt.swift
Sources/SDGBinaryDataTestUtilities/: Exports.swift
Sources/SDGCalendar/: AnyDescribableDate.swift  CalendarDate.swift  CalendarInterval.swift  Date.swift  DateDefinition.swift  DescribableDate.swift  Exports.swift  FoundationDate.swift  RationalArithmetic.swift  RelativeDate.swift  UnknownDate.swift
Sources/SDGCalendarTestUtilities/: Exports.swift
Sources/SDGCollation/: CollationCacheEntry.swift  CollationDecoder.swift  CollationElement.swift  CollationEncoder.swift  CollationIndex.swift  CollationLevel.swift  CollationOrder.swift  Resources.swift  Root
Sources/SDGCollections/: Addable.swift  Exports.swift  LegacyMode.swift  Operators.swift  ScratchSpace.swift
Sources/SDGCollections2/: PatternMatch.swift
Sources/SDGCollectionsCore/: BidirectionalCollection.swift  BijectiveMapping.swift  Collection.swift  Dictionary.swift  Exports.swift  Hashable.swift  RangeReplaceableCollection.swift
Sources/SDGCollectionsTestUtilities/: BidirectionalCollection.swift  BidirectionalPattern.swift  Collection.swift  ComparableSet.swift  Exports.swift  FiniteSet.swift  Hashable.swift  MutableSet.swift  Pattern.swift  RandomAccessCollection.swift  RangeReplaceableCollection.swift  SetDefinition.swift  SetInRepresentableUniverse.swift
Sources/SDGConcurrency/: Exports.swift  RunLoop.swift
Sources/SDGControlFlow/: APILocalization.swift  Assert.swift  AutoreleasePool.swift  BuildConfiguration.swift  Caching.swift  Cocoa.swift  CustomDebugStringConvertible.swift  CustomPlaygroundDisplayConvertible.swift  CustomReflectable.swift  Decodable.swift  DefaultAssignmentPropertyWrapper.swift  Encodable.swift  IterableEnumeration.swift  Memory.swift  NonmutatingVariants.swift  ProjectingPropertyWrapper.swift  PropertyWrapper.swift  RawRepresentable.swift  SelfProjectingPropertyWrapper.swift  SendableValueCache.swift  Shared.swift  SharedProperty.swift  SharedValueObserver.swift  TextualPlaygroundDisplay.swift  TransparentWrapper.swift  Tuple.swift  Weak.swift
Sources/SDGCornerstone/: Exports.swift  Initialization.swift
Sources/SDGCornerstoneLocalizations/: APILocalization.swift  Exports.swift  (+2 more)
Tests/: LinuxMain.swift
docs/: index.html
🇨🇦EN/: About.html  Importing.html  Related Projects.html  SDGCornerstone.html  index.html
(+12325 files in other folders)
